# Minotaur

./: .gitignore  Client.cpp  Client.h  README.md  Server.cpp  Server.h  app.cpp  bayesrule.cpp  bayesruleExec.cpp  bayesruleExec.hpp  count.cpp  helper.hpp  sSplitExec.cpp  sSplitExec.hpp  sSplitter.cpp  sSpout.cpp  sSpoutExec.cpp  sSpoutExec.hpp  setup.sh  splitExec.cpp  splitExec.hpp  splitter.cpp  spout.cpp  spoutExec.cpp  test.cpp  textRepresentation.cpp  textRepresentation.h  tokenizerExec.cpp  utils.cpp  utils.hpp  wordprob.cpp  wordprobExec.cpp  wordprobExec.hpp
Minotaur-SGX/: CMakeLists.txt  Makefile  README.md  cleanup.sh  countIP  get_percentile.py  preprocess.sh  rundistributed.sh  spoutIP
Minotaur-SGX/App/: App.cpp  App.old  app.cpp  count.cpp  splitter.cpp  spout.cpp  utils.hpp
Minotaur-SGX/Enclave/: Bolt.cpp  Enclave.config.xml  Enclave.cpp  Enclave.edl  Enclave.hpp  Sink.cpp  Spout.cpp  splitExec.cpp
Minotaur-SGX/Include/: user_types.h
Minotaur-SGX/PTWordCount/App/: aesgcm.cpp  utils.hpp
Minotaur-SGX/PTWordCount/Enclave/: Enclave.cpp  Enclave.edl  Enclave_new.edl
Minotaur-SGX/SpikeDetection/: Makefile  cleanup.sh  kill.sh  script.sh  spikeIP
Minotaur-SGX/SpikeDetection/App/: App.cpp  TimedBuffer.cpp  (+7 more)
Minotaur-SGX/WordCount-MsgPack/: Makefile  aggregateIP  app  book  cleanup.sh  script.sh  spoutIP
Minotaur-SGX/WordCount-Native/: countIP
Minotaur-SGX/WordCount-NoEncryption/: script.sh  spoutIP
Minotaur-SGX/WordCount-Protobuf/: Makefile
Minotaur-SGX/nbproject/: Makefile-Debug.mk  Package-Release.bash  configurations.xml  project.xml
(+86 files in other folders)
